2002-02-21  Braden McDaniel  <braden@endoframe.com>

        * VrmlMatrix: contructor that takes float args doesn't need to
          be explicit.

        * VrmlMatrix: removed methods:

              void set(const float[4][4]);
              void get(float[4][4]);
              const float (&get() const)[4][4];

          Use operator[] and std::copy instead.

        * VrmlMatrix: doc-comment improvements.

        * VrmlMatrix: Don't check if matrix is identity before
          performing multiplication in multRight and multLeft.

        * VrmlMatrix: Use std::equal to implement operator==.

        * VrmlMatrix: more doc-comment improvements.

        * Move VrmlEvent to an unnamed namespace in ScriptJDK.cpp.

        * AUTHORS: Added Frederic Devernay as a contributor.

        * AUTHORS: Updated Gerall Kahla's e-mail address.

        * THANKS: openvrml.org is now hosted by SourceForge; reflect
          name change VA Linux -> VA Software.

2002-02-19  Braden McDaniel  <braden@endoframe.com>

        * VrmlMatrix: use std::copy instead of memcpy.

        * VrmlMatrix: improved doc-comments.

        * VrmlMatrix: made construction from 4x4 array explicit.

        * VrmlMatrix: removed automatic conversion to float *.  Use
          operator[] for this instead.

        * VrmlMatrix: removed assignment operator definitions; just use
          the compiler-defined operator=.

        * Removed VrmlMatrix::makeIdentity. Just assign to a default
          VrmlMatrix instead.

        * VrmlMatrix.h should include <assert.h>.

2002-02-13  Braden McDaniel  <braden@endoframe.com>

        * Updated doc/Makefile.am for Autoconf 2.52; added openvrml.css
          to the distribution.
        
        * Fixed cases where the parser was returning a funky line
          number: use the "antlr::SemanicException" constructor
          that takes a line number argument.

        * Fixed crash in parser when an invalid field value was
          encountered.
